# simple-vending-machine

./: CMakeLists.txt
src/: main.c
