CMAKE_MINIMUM_REQUIRED ( VERSION 2.8...3.13 )
PROJECT ( "simple-vending-machine" )

SET ( CMAKE_BUILD_TYPE Debug )
SET ( CMAKE_VERBOSE_MAKEFILE true )

SET ( OUTPUT_ELF
    "${CMAKE_PROJECT_NAME}"
)

SET ( SRC_FILES
    src/main.c
)

SET ( CMAKE_C_COMPILER "gcc" )

INCLUDE_DIRECTORIES ( src )

ADD_COMPILE_OPTIONS ( -g -Wall )

SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE} )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )

ADD_EXECUTABLE( ${OUTPUT_ELF} ${SRC_FILES} )